Fix minor layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -992,6 +992,22 @@ i {
     font-weight: 300;
 }
 
+#contact-form input[type=submit] {
+    background-color: #FCB600;
+        height: 40px;
+        border: none;
+        color: #171a1c;
+        padding: 8px 32px;
+        text-align: center;
+        text-decoration: none;
+        font-weight: 500;
+        font-size: 110%;
+        border-radius: 8px;
+        width: 300px;
+        float: right;
+
+}
+
 @media screen and (max-width: 1280px) {
     .contact-container {
         grid-template-columns: 1fr 1fr 1fr;
